--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-image" src="images/techCrunch.png" alt="tc-logo">
+    <img class="press-image" src="images/the-verge-logo.png" alt="verge-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-image" src="images/mashable.png" alt="mashable-logo">
